[gd_scene load_steps=9 format=2]

[ext_resource path="res://Data/Fonts/fontRobotoMedium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Data/Fonts/fontRobotoLight.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Splash/sprAhopness/0022.png" type="Texture" id=3]
[ext_resource path="res://Scripts/scrScene.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 63, 14 )

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("txtPlaytestInfo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 0.4, 0.4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("txtPlaytestInfo:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 0.4, 0.4, 1 ),
"update": 0,
"values": [ Vector2( 57.5, 280 ), Vector2( 57.5, 280 ), Vector2( 57.5, 245 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("txtPlaytestInfo2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 0.4, 0.4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("txtPlaytestInfo2/btnQuit:shape_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="scnPlaytestEnd" type="Spatial"]
script = ExtResource( 4 )
currect_scene = 3

[node name="clBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprAhopness" type="TextureRect" parent="clBG"]
modulate = Color( 1, 1, 1, 0.180392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPlaytestInfo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.5
margin_top = -75.0
margin_right = 122.5
margin_bottom = 75.0002
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "&playtest2"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPlaytestInfo2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -54.0
margin_top = -63.0
margin_right = 54.0
margin_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "&playtest3"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnQuit" type="TouchScreenButton" parent="txtPlaytestInfo2"]
position = Vector2( 51, 14 )
shape = SubResource( 3 )
shape_centered = false

[node name="anmPlaytest" type="AnimationPlayer" parent="."]
autoplay = "anmInit"
anims/anmInit = SubResource( 4 )

[connection signal="released" from="txtPlaytestInfo2/btnQuit" to="." method="_on_end_playtesting_session"]
